Test Sandbox Project/src/objects/Email_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Log</relationshipLabel>
        <relationshipName>Email_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Message2__c</fullName>
        <label>All Message2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>All_Message3__c</fullName>
        <label>All Message3</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>All_Message__c</fullName>
        <label>All Message</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Email Log</relationshipLabel>
        <relationshipName>Email_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Log</relationshipLabel>
        <relationshipName>Email_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ready_To_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready To Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Email Log</relationshipLabel>
        <relationshipName>Email_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Email Log</relationshipLabel>
        <relationshipName>Email_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Email Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>